# OpenMPI5

./: .clang-format  .gitignore  .gitmodules  VERSION  configure.ac
config/: ompi_configure_options.m4  opal_check_cudart.m4  opal_check_mpc_lowcomm.m4
contrib/: Makefile.am  clang-format-ompi.sh  clang-format-pre-commit
contrib/platform/bull/: debug  debug.conf  optimized  optimized.conf
docs/: Makefile.am
docs/man-openmpi/man3/: MPIX_Get_notify.3.rst  MPIX_Palltoall_init.3.rst  MPIX_Palltoallr_init.3.rst  MPIX_Palltoallv_init.3.rst  MPIX_Palltoallvr_init.3.rst  MPIX_Pbcast_init.3.rst  MPIX_Pbcastr_init.3.rst  MPIX_Pgather_init.3.rst  MPIX_Pgatherr_init.3.rst  MPIX_Preduce_init.3.rst  MPIX_Preducer_init.3.rst  MPIX_Put_notify.3.rst  MPIX_Win_allocate_notify.3.rst  MPIX_Win_create_notify.3.rst  MPIX_Win_test_notify.3.rst  MPIX_Win_wait_notify.3.rst  index.rst
ompi/communicator/: comm.c  communicator.h
ompi/datatype/: ompi_datatype.h  ompi_datatype_sndrcv.c
ompi/errhandler/: errcode.c  errhandler.h
ompi/include/: mpi.h.in
ompi/mca/bml/: bml.h
ompi/mca/coll/: coll.h
ompi/mca/coll/base/: Makefile.am  coll_base_allgather.c  coll_base_allgatherv.c  coll_base_allreduce.c  coll_base_alltoall.c  coll_base_alltoallv.c  coll_base_alltoallw.c  coll_base_bcast.c  coll_base_comm_select.c  coll_base_dynamic_file.c  coll_base_dynamic_file.h  coll_base_dynamic_rules.c  coll_base_dynamic_rules.h  coll_base_exscan.c  coll_base_functions.h  coll_base_gather.c  coll_base_neighbor_alltoallv.c  coll_base_neighbor_alltoallw.c  coll_base_reduce.c  coll_base_scan.c  coll_base_util.c  coll_base_util.h  coll_tags.h  help-mca-coll-base.txt
ompi/mca/coll/basic/: Makefile.am  coll_basic.h  coll_basic_allreduce.c  coll_basic_alltoallw.c  coll_basic_gatherw.c  coll_basic_module.c  coll_basic_reduce.c  coll_basic_scatterw.c
ompi/mca/coll/bullnbc/: Makefile.am  coll_bullnbc.c  coll_bullnbc.h  coll_bullnbc_component.c  coll_bullnbc_iallgather.c  coll_bullnbc_iallgatherv.c  coll_bullnbc_iallreduce.c  coll_bullnbc_ialltoall.c  coll_bullnbc_ialltoallv.c  coll_bullnbc_ialltoallw.c  coll_bullnbc_ibarrier.c  coll_bullnbc_ibcast.c  coll_bullnbc_iexscan.c  coll_bullnbc_igather.c  coll_bullnbc_igatherv.c  coll_bullnbc_igatherw.c  coll_bullnbc_ineighbor_allgather.c  coll_bullnbc_ineighbor_allgatherv.c  coll_bullnbc_ineighbor_alltoall.c  coll_bullnbc_ineighbor_alltoallv.c  coll_bullnbc_ineighbor_alltoallw.c  coll_bullnbc_internal.h  coll_bullnbc_ireduce.c  coll_bullnbc_ireduce_scatter.c  coll_bullnbc_ireduce_scatter_block.c  coll_bullnbc_iscan.c  coll_bullnbc_iscatter.c  coll_bullnbc_iscatterv.c  coll_bullnbc_neighbor_helpers.c  coll_bullnbc_partitioned.c  coll_bullnbc_partitioned.h  coll_bullnbc_partitioned_dag.c  coll_bullnbc_partitioned_dag.h  coll_bullnbc_partitioned_dag_sched.c  coll_bullnbc_partitioned_noop.c  help-mpi-coll-bullnbc.txt  owner.txt
ompi/mca/coll/bullnbc/base/: coll_bullnbc_base.h  coll_bullnbc_base_ibarrier.c
ompi/mca/coll/cuda/: coll_cuda.h  coll_cuda_allreduce.c  coll_cuda_component.c  coll_cuda_exscan.c  coll_cuda_module.c  coll_cuda_reduce.c  coll_cuda_reduce_scatter_block.c  coll_cuda_scan.c
ompi/mca/coll/han/: Makefile.am  coll_han.h  coll_han_algorithms.c  coll_han_algorithms.h  coll_han_allgather.c  coll_han_allreduce.c  coll_han_alltoall.c  coll_han_alltoallv.c  coll_han_barrier.c  coll_han_bcast.c  coll_han_component.c  coll_han_dynamic.c  coll_han_dynamic.h  coll_han_dynamic_file.c  coll_han_dynamic_file.h  coll_han_gather.c  coll_han_module.c  coll_han_reduce.c  coll_han_scatter.c  coll_han_subcomms.c  coll_han_topo.c  coll_han_trigger.h
ompi/mca/coll/hcoll/: coll_hcoll.h  coll_hcoll_component.c  coll_hcoll_module.c
ompi/mca/coll/inter/: coll_inter_allreduce.c
ompi/mca/coll/libnbc/: Makefile.am  coll_libnbc.h  coll_libnbc_component.c  help-mpi-coll-libnbc.txt  nbc_iallgather.c  nbc_iallreduce.c  nbc_ialltoall.c  nbc_ialltoallv.c  nbc_ialltoallw.c  nbc_ibcast.c  nbc_iexscan.c  nbc_igatherw.c  (+3 more)
ompi/mca/osc/: osc.h
ompi/mca/part/: part.h
ompi/mca/pml/mpc/: Makefile.am  README.md  configure.m4  pml_mpc.c  pml_mpc.h  pml_mpc_communicator.c  pml_mpc_communicator.h  pml_mpc_component.c  pml_mpc_irecv.c  pml_mpc_isend.c  pml_mpc_pack.c  pml_mpc_pack.h  pml_mpc_request.c  pml_mpc_request.h
ompi/mpi/c/: precv_init.c  psend_init.c  win_complete.c  win_fence.c  win_flush.c  win_flush_all.c  win_flush_local.c  win_flush_local_all.c  win_lock.c  win_lock_all.c  win_post.c  win_start.c  win_unlock.c  win_unlock_all.c  win_wait.c
ompi/mpiext/notified_rma/: Makefile.am  README.txt  configure.m4
ompi/mpiext/notified_rma/c/: Makefile.am  help-mpi-notifications.txt  mpiext_get_notify.c  mpiext_notified_rma.c  mpiext_notified_rma_c.h  mpiext_notified_rma_c.h.in  mpiext_notifs_rma.h  mpiext_put_notify.c  mpiext_win_allocate_notify.c  mpiext_win_create_notify.c  mpiext_win_test_notify.c  mpiext_win_wait_notify.c
ompi/mpiext/notified_rma/mpif-h/: Makefile.am  mpiext_get_notify_f.c  mpiext_notified_rma_mpifh.h  mpiext_notified_rma_prototypes.h  mpiext_put_notify_f.c  mpiext_win_allocate_notify_f.c  mpiext_win_create_notify_f.c  mpiext_win_test_notify_f.c  mpiext_win_wait_notify_f.c
ompi/mpiext/notified_rma/use-mpi/: Makefile.am  mpiext_notified_rma_usempi.h
ompi/mpiext/pcoll_part/: Makefile.am  configure.m4
ompi/mpiext/pcoll_part/c/: Makefile.am  mpiext_pcoll_part_c.h  palltoall_init.c  palltoallr_init.c  palltoallv_init.c  palltoallvr_init.c  pbcast_init.c  pbcastr_init.c  pgather_init.c  pgatherr_init.c  preduce_init.c  preducer_init.c
ompi/mpiext/pcollreq/: Makefile.am  configure.m4
ompi/request/: request.c  request.h  request_dbg.h
ompi/runtime/: ompi_mpi_params.c  ompi_spc.c  ompi_spc.h  params.h
ompi/win/: win.c  win.h
opal/etc/: Makefile.am
opal/include/opal/: Makefile.am  opal_touch_pages.h  prefetch.h
opal/mca/base/: mca_base_pvar.c
opal/mca/btl/: btl.h
opal/mca/memchecker/: memchecker.h
opal/runtime/: opal_params.h  opal_params_core.c  opal_params_core.h
test/coll/: Makefile.am  ompi_coll_configfile.c
test/util/: Makefile.am
(+191 files in other folders)
