#
# Copyright (c) 2022-2024 BULL S.A.S. All rights reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# There's nothing to build or install for the "use mpi" bindings for
# this MPI extension.  However, we must list the header file that will
# be slurped up to be part of the mpi_ext Fortran module so that it is
# included in dist tarballs.

noinst_HEADERS = mpiext_notified_rma_usempi.h
